[WIP] feat: Creating the development environment for indexer with the contracts being deployed in the anvil; feat: Adding relations between tables in the drizzle schema;

--- a/apps/petition/Dockerfile
+++ b/apps/petition/Dockerfile
@@ -33,7 +33,11 @@ RUN chmod +x apps/petition/entrypoint.sh
 RUN npm install -g pnpm
 
 RUN addgroup --system --gid 1001 expressjs
-RUN adduser --system --uid 1001 expressjs
+RUN adduser --system --uid 1001 expressjs --home /home/expressjs --shell /bin/sh
+RUN mkdir -p /home/expressjs/.local/share/pnpm
+RUN chown -R expressjs:expressjs /home/expressjs
+RUN chown -R expressjs:expressjs /app
+
 USER expressjs
 
 EXPOSE 3100
