Fix: Fixing the changes requested in the code review;

--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: postgres
+    tmpfs:
+      - /var/lib/postgresql/data:rw,noexec,nosuid
     networks:
       - backend
 
