fix: Implementing changes requested in the PR; refactor: Moving the local-node to it's own package;

--- a/apps/local-node/package.json
+++ b/apps/local-node/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@gov-indexer/contracts",
+  "name": "@anticapture/local-node",
   "version": "1.0.0",
+  "packageManager": "pnpm@10.10.0",
   "scripts": {
     "locally:deploy-ens": "forge script ./script/DeployENS.d.sol --broadcast --rpc-url http://127.0.0.1:8545 --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
   },
