feat: Creating the REST endpoint for historical balances; feat: Adding deployment for Multicall3 contract in the local node; refactor: Moving ENS contracts to an "ens" folder in the local node folder structure; [WIP] Missing GraphQL Resolver;

--- a/apps/local-node/foundry.toml
+++ b/apps/local-node/foundry.toml
@@ -5,6 +5,6 @@ libs = ["lib"]
 optimizer = true
 remappings = [
   "@openzeppelin=node_modules/@openzeppelin",
-  "forge-std=lib/forge-std",
+  "forge-std=node_modules/forge-std/src",
 ]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
