--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,19 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8545", "-X", "POST", "-H", "Content-Type: application/json", "-d", "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}"]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:8545",
+          "-X",
+          "POST",
+          "-H",
+          "Content-Type: application/json",
+          "-d",
+          '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}',
+        ]
       interval: 5s
       timeout: 3s
       retries: 10
@@ -39,8 +51,7 @@ services:
   indexer:
     build:
       context: .
-      dockerfile: infra/indexer/Dockerfile.indexer
-    command: ["npm", "run", "start", "--", "--config", "config/ens.local.config.ts"]
+      dockerfile: apps/indexer/Dockerfile.indexer
     environment:
       - DATABASE_URL=postgres://postgres:admin@indexer-db:5432/postgres
       - DAO_ID=ENS
