--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@anticapture/graphql-client": "*",
     "@ethersproject/providers": "^5.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
