--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Anticapture Monorepo",
   "scripts": {
     "dashboard": "dotenv -- pnpm run --filter=@anticapture/dashboard",
-    "indexer": "dotenv -- pnpm run --filter=@anticapture/indexer",
+    "indexer": "dotenv -- pnpm run --filter=@anticapture/indexer dev --config config/ens.local.config.ts",
     "gateway": "dotenv -- pnpm run --filter=@anticapture/api-gateway",
     "petition": "dotenv -- pnpm run --filter=@anticapture/petition",
     "indexer-metrics": "dotenv -- pnpm run --filter=@anticapture/indexer-metrics",
