--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       - "8545:8545"
     networks:
       - backend
+    env_file:
+      - path: ./.env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8545", "-X", "POST", "-H", "Content-Type: application/json", "-d", "{\"jsonrpc\":\"2.0\",\"method\":\"eth_blockNumber\",\"params\":[],\"id\":1}"]
       interval: 5s
