--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@anticapture/graphql-client": "file:../graphql-client",
+    "@apollo/client": "^3.13.8",
     "@ethersproject/providers": "^5.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
@@ -28,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "19.1.0",
