--- a/apps/indexer/.eslintrc.json
+++ b/apps/indexer/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "extends": "ponder",
-  "plugins": [
-    "prettier"
-  ],
+  "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error"
   }
