--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,7 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@anticapture/graphql-client": "file:../graphql-client",
+    "@anticapture/graphql-client": "workspace:*",
     "@apollo/client": "^3.13.8",
     "@ethersproject/providers": "^5.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
