--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -70,6 +70,7 @@
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.2.6",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.3"
   }
 }
