--- a/apps/indexer/Dockerfile.indexer
+++ b/apps/indexer/Dockerfile.indexer
@@ -12,4 +12,11 @@ WORKDIR /app
 COPY --from=builder /app .
 RUN npm install -g pnpm
 EXPOSE 42069
-CMD ["pnpm", "run", "start", "--config", "config/ens.config.ts"]
+
+ARG CONFIG_FILE
+ARG SCHEMA="public"
+
+ENV CONFIG_FILE=${CONFIG_FILE}
+ENV SCHEMA=${SCHEMA}
+
+CMD pnpm start --config ${CONFIG_FILE} --schema=${SCHEMA}
