chore: remove apoolo as deps from client

--- a/packages/graphql-client/package.json
+++ b/packages/graphql-client/package.json
@@ -8,14 +8,19 @@
     "clean": "rm -f src",
     "dev": "npm run codegen:watch"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "./react": {
+    ".": {
       "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./react": {
+      "types": "./dist/index.d.ts", 
       "default": "./dist/index.js"
     }
   },
   "dependencies": {
-    "@apollo/client": "^3.13.8",
     "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.1",
