--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "dotenv-cli": "^7.4.4",
     "husky": "^9.1.6",
     "turbo": "^2.3.1"
-  }
+  },
+  "private": true,
+  "workspaces": [
+    "dashboard",
+    "graphql-client"
+  ]
 }
