--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "private": true,
   "workspaces": [
-    "dashboard",
-    "graphql-client"
+    "apps/dashboard",
+    "apps/graphql-client"
   ]
 }
