fix: removing prepare husky line;

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "gateway": "dotenv -- pnpm run --filter=@anticapture/api-gateway",
     "petition": "dotenv -- pnpm run --filter=@anticapture/petition",
     "indexer-metrics": "dotenv -- pnpm run --filter=@anticapture/indexer-metrics",
-    "local-node": "dotenv -- pnpm run --filter=@anticapture/local-node",
-    "prepare": "husky"
+    "local-node": "dotenv -- pnpm run --filter=@anticapture/local-node"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.10.0",
