--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -23,6 +23,7 @@
     "@graphql-mesh/openapi": "^0.109.8",
     "@graphql-mesh/runtime": "^0.106.3",
     "@graphql-mesh/types": "^0.104.3",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "graphql": "^16.11.0"
   }
 }
