--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -44,6 +44,7 @@
     "wagmi": "^2.12.25"
   },
   "devDependencies": {
+    "vitest": "^3.2.1",
     "@chromatic-com/storybook": "^3.2.6",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
