chore: add db password to secrets

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "deploy": "sst deploy",
-    "dev": "sst dev"
+    "dev": "sst dev",
+    "db": "sst tunnel"
   },
   "keywords": [],
   "author": "",
