--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -25,6 +25,7 @@
     "@graphql-mesh/runtime": "^0.106.4",
     "@graphql-mesh/types": "^0.104.4",
     "dotenv": "^16.5.0",
+    "graphql": "^16.11.0",
     "sst": "^3.17.0"
   }
 }
