--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-* @heronlancellot @lgahdl @eduramme @lucaspicolloo @LeonardoVieira1630 @alextnetto
+* @heronlancellot @lgahdl @edulennert @pikonha @LeonardoVieira1630 @alextnetto
 
 apps/dashboard/* @isadorable-png
