fix: indexer api use db view as schema

--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ponder dev --schema public",
     "start": "ponder start --views-schema=anticapture --schema=\"$(git rev-parse --short=8 HEAD):$(git branch --show-current)\"",
-    "serve": "ponder serve --schema=\"$(git rev-parse --short=8 HEAD):$(git branch --show-current)\"",
+    "serve": "ponder serve --schema=anticapture",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc"
