feat: add codegen and build watch

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "petition": "dotenv -- pnpm run --filter=@anticapture/petition",
     "indexer-metrics": "dotenv -- pnpm run --filter=@anticapture/indexer-metrics",
     "local-node": "dotenv -- pnpm run --filter=@anticapture/local-node",
-    "client": "pnpm run --filter=@anticapture/graphql-client"
+    "client": "dotenv -- pnpm run --filter=@anticapture/graphql-client"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.10.0",
