--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -25,7 +25,8 @@ jobs:
             services="${services}\"${dao}-indexer\","
             # services="${services}\"${dao}-api\","
           done
-          services="${services}\"api-gateway\"]"
+          #services="${services}\"api-gateway\""
+          services="${services}]"
 
           echo "services=$services" >> $GITHUB_OUTPUT
           echo "Detected services: $services"
@@ -52,4 +53,5 @@ jobs:
       - name: Deploy ${{ matrix.service }}
         env:
           RAILWAY_TOKEN: ${{ steps.env.outputs.railway_token }}
-        run: railway up -s ${{ matrix.service }} -e ${{ steps.env.outputs.environment }} --ci
+        # run: railway up -s ${{ matrix.service }} -e ${{ steps.env.outputs.environment }} --ci
+        run: echo ${{ matrix.service }} -e ${{ steps.env.outputs.environment }} --ci ${{ steps.env.outputs.railway_token }}
