--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -17,7 +17,7 @@ jobs:
         id: get-daos
         run: |
           # Extract DAO names from config files (excluding local configs)
-          daos=$(ls apps/indexer/config/*.config.ts | grep -v local | grep ens | sed 's/.*\/\([^.]*\)\.config\.ts/\1/')
+          daos=$(ls apps/indexer/config/*.config.ts | grep ens | grep -v local | sed 's/.*\/\([^.]*\)\.config\.ts/\1/')
 
           # Create DAO array
           dao_array="["
