--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -3,8 +3,16 @@ name: Deploy Indexers and API Gateway to Railway
 on:
   push:
     branches: [dev, main]
+    paths:
+      - "apps/indexer/**/*.ts"
+      - "apps/api-gateway/**/*.ts"
+      - "infra/**"
   pull_request:
     branches: [dev, main]
+    paths:
+      - "apps/indexer/**/*.ts"
+      - "apps/api-gateway/**/*.ts"
+      - "infra/**"
 
 jobs:
   get-daos:
@@ -17,7 +25,7 @@ jobs:
         id: get-daos
         run: |
           # Extract DAO names from config files (excluding local configs)
-          daos=$(ls apps/indexer/config/*.config.ts | grep ens | grep -v local | sed 's/.*\/\([^.]*\)\.config\.ts/\1/')
+          daos=$(ls apps/indexer/config/*.config.ts | grep -v local | sed 's/.*\/\([^.]*\)\.config\.ts/\1/')
 
           # Create DAO array
           dao_array="["
