feat: add dev in graphql-client script

--- a/packages/graphql-client/package.json
+++ b/packages/graphql-client/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -f generated.ts types.ts",
-    "dev": "npm run codegen:watch"
+    "dev": "concurrently \"npm run codegen:watch\" \"npm run build:watch\""
   },
   "main": "dist/generated.js",
   "types": "dist/types.js",
@@ -27,7 +27,8 @@
     "@graphql-codegen/typescript-operations": "^4.6.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.3",
     "graphql": "^16.11.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "concurrently": "^9.2.0"
   },
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
