fix: local node command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,16 +50,16 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "ponder api",
+      "name": "ponder",
       "skipFiles": [
         "<node_internals>/**"
       ],
       "runtimeExecutable": "pnpm",
       "runtimeArgs": [
         "run",
-        "serve",
+        "dev",
         "--config",
-        "config/ens.config.ts"
+        "config/ens.local.config.ts"
       ],
       "env": {
         "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json",
