chore: add clean script to all packages

--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "node dist/src/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf node_modules dist schema.graphql *.tsbuildinfo"
   },
   "keywords": [],
   "author": "",
