--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,10 @@
   "tasks": {
     "build": {
       "outputs": ["dist/**", ".next/**", ".next/cache/**"]
+    },
+    "clean": {
+    },
+    "lint": {
     }
   }
 }
