--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "format": "prettier --write .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "clean": "rm -rf node_modules .next out build coverage storybook-static *.tsbuildinfo *storybook.log"
   },
   "dependencies": {
     "@anticapture/graphql-client": "workspace:*",
