--- a/apps/indexer/.eslintrc.json
+++ b/apps/indexer/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-  "extends": "ponder",
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "extends": [
+    "../../.eslintrc.json",
+    "ponder"
+  ]
 }
