--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/node": "^20.16.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "dotenv-cli": "^7.4.4",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
-    "turbo": "^2.3.1"
+    "prettier": "^3.4.2",
+    "turbo": "^2.3.1",
+    "typescript": "^5.8.3"
   },
   "private": true,
   "workspaces": [
